<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Banana Clicker</string>
    <string name="second_fragment_label">Banana Clicker Store</string>
    <string name="previous">Leave Store</string>
    <string name="toast_button">Level Up</string>
    <string name="count_button">COUNT</string>
    <string name="random_button_text">Store</string>
    <string name="next_button_text">Next</string>
    <string name="hello_first_fragment">0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="random_text">Your gold: %d</string>
    <string name="random_header">R</string>
    <string name="bpc">Bananas/Click++</string>
    <string name="bpcPrice">Cost: %d</string>
    <string name="bpcView">%d</string>
    <string name="gpbButtonText">Gold/Banana++</string>
    <string name="gpbUText">%d</string>
    <string name="gpbCostText">Cost: %d</string>
    <string name="bpcTVstring">Bananas/Click: \n%d</string>
    <string name="gpcTVstring">Gold/Click: \n%d</string>
    <string name="gpbTVstring">Gold/Banana: \n%d</string>
    <string name="levelTVstring">Level: \n%d</string>
    <string name="prestigeTVstring">Prestige:\n%d</string>
    <string name="level_up">Level Up</string>
    <string name="levelButtonString">Level++</string>
    <string name="levelUTVstring">%d</string>
    <string name="levelCostTV">Cost: %d</string>
    <string name="prestigeButtonString">Prestige</string>
    <string name="prestigeCostString">Available at %d</string>
    <string name="bpcMaxString">BUY MAX</string>
    <string name="gpbMaxString">BUY MAX</string>
</resources>