<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banana_store"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/random_text"
        android:textColor="#FFFFFF"
        android:shadowColor = "#000"
        android:shadowDx = "-2"
        android:shadowDy = "-2"
        android:shadowRadius = "1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bananaperclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bpc"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bpcPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bpcPrice"
        android:textColor="#FFFFFF"
        android:shadowColor = "#000"
        android:shadowDx = "-2"
        android:shadowDy = "-2"
        android:shadowRadius = "2"
        app:layout_constraintBottom_toBottomOf="@+id/bananaperclick"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/bananaperclick"
        app:layout_constraintTop_toTopOf="@+id/bananaperclick" />

    <TextView
        android:id="@+id/bpcView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bpcView"
        android:textColor="#FFFFFF"
        android:shadowColor = "#000"
        android:shadowDx = "-2"
        android:shadowDy = "-2"
        android:shadowRadius = "2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bananaperclick"
        app:layout_constraintEnd_toStartOf="@+id/bananaperclick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bananaperclick" />

    <Button
        android:id="@+id/goldperbanana"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gpbButtonText"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="@+id/bananaperclick"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/bananaperclick"
        app:layout_constraintTop_toBottomOf="@+id/bananaperclick"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/gpbUText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpbUText"
        android:textColor="#FFFFFF"
        android:shadowColor = "#000"
        android:shadowDx = "-2"
        android:shadowDy = "-2"
        android:shadowRadius = "2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/goldperbanana"
        app:layout_constraintEnd_toStartOf="@+id/goldperbanana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/goldperbanana" />

    <TextView
        android:id="@+id/gpbCostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpbCostText"
        android:textColor="#FFFFFF"
        android:shadowColor = "#000"
        android:shadowDx = "-2"
        android:shadowDy = "-2"
        android:shadowRadius = "2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/goldperbanana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goldperbanana"
        app:layout_constraintTop_toTopOf="@+id/goldperbanana" />
</androidx.constraintlayout.widget.ConstraintLayout>